Fix a layout issue on album names in the mobile layout
Long album names were overlapping the alphabet navigation on the mobile
layout. Fixing this was tricky because setting the percent-based
max-width didn't work in the "compact" mode where the <h2> element
doesn't have (and can't easily have) the "position: absolute"
definition. There we can use viewport-width based calculation (with the
unit "vw"), but that doesn't solve the issue in case we have the
navigation pane and sidebar visible and the app-view is much narrower
than the viewport. This final case was left unsolved.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -62,8 +62,8 @@
 	height: 50px;
 	line-height: 50px;
 }
-.mobile .album-area h2 {
-	max-width: 75%;
+.mobile .view-container.single-col:not(.compact) .album-area h2 {
+	white-space: nowrap; /* override multi-line normally allowed in .single-col */
 }
 .mobile .album-area > h2 > div {
 	line-height: 1.2;
@@ -136,7 +136,7 @@
 	margin-left: -4px;
 }
 
-/* extra narrow screen may result on desktop browser when manually resizing the window; drop non-essential elements and margins */
+/* extra narrow screen matches small smart phones; drop non-essential elements and margins */
 .extra-narrow #controls .albumart {
 	display: none;
 }
@@ -150,6 +150,7 @@
 	padding-left: 18px;
 }
 
+/* min-width screen may result on desktop browser when manually resizing the window; here we need to drop also essential elements */
 .min-width #controls .song-info,
 .min-width #controls .toggle {
 	display: none;
