--- a/css/tablet.css
+++ b/css/tablet.css
@@ -12,10 +12,6 @@
  * @copyright Pauli Järvinen 2016 - 2021
  */
 
-.tablet .view-container:not(.compact) .album-area > h2 {
-	white-space: normal;
-}
-
 .tablet #play-controls {
 	margin-left: 0;
 }
